Fix installation CSS issue where checkboxes were not aligned w/ text labels.

--- a/plugins/Morpheus/stylesheets/general/_forms.less
+++ b/plugins/Morpheus/stylesheets/general/_forms.less
@@ -1,4 +1,4 @@
-input, select, textarea {
+input:not([type="checkbox"]), select, textarea {
     color: @theme-color-text;
     .border-radius(0px);
     margin-left: 0;
